--- a/assets/css/busca.css
+++ b/assets/css/busca.css
@@ -19,17 +19,47 @@ input {
     padding: 14px;
     border-radius: 30px;
     border: 2px solid #3d00c1;
+    -webkit-box-shadow: 8px 11px 11px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 8px 11px 11px 0px rgba(0,0,0,0.75);
+    box-shadow: 8px 11px 11px 0px rgba(0,0,0,0.75);
+    transition: .4s ease-in-out
 }
 
-button {
+input:hover {
+    transform: scale(1.08);
+    transition: .4s ease-in-out;
+}
+
+input::placeholder, input {
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+button[type=submit] {
     outline: none;
     padding: 14px;
     border-radius: 30px;
+    cursor: pointer;
     border: 2px solid #3d00c1;
+    background-image: linear-gradient(#661fff, #3600ac);
+    -webkit-box-shadow: 4px 8px 11px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 8px 11px 0px rgba(0,0,0,0.75);
+    box-shadow: 4px 8px 11px 0px rgba(0,0,0,0.75);
+    transition: .2s ease-out;
+}
+
+button[type=submit]:hover {
+    background-image: linear-gradient(#3600ac, #661fff);
 }
 
 .align {
     display: flex;
     flex-direction: row;
     gap: 30px;
+}
+
+.icon {
+    font-size: 20px;
+    color: #fff;
 }
